--- a/sass/checkbox_radio_font.scss
+++ b/sass/checkbox_radio_font.scss
@@ -7,6 +7,9 @@
 	&:hover {
 		cursor: pointer;
 	}
+    .fa {
+        width: 1em;
+    }
 }
 
 
@@ -35,6 +38,7 @@
 		content: "\f046";
 		color: green;
 	}
+    &:disabled + i:before,
 	&:disabled:checked + i:before {
 		color: #ddd;
 	}
@@ -47,9 +51,6 @@
 	}
 	&:checked + i:before {
 		content: "\f058";
-	}
-	&:disabled + i:before {
-		color: #ddd;
 	}
 }
 
